--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "erusev/parsedown": "^1.6",
-        "twig/twig": "^1.24"
+        "twig/twig": "^1.24",
+        "bentasker/php-gpx-ingest": "dev-master"
     }
 }
